# insights-from-team-survey

./: README.md  extract_insights_from_last_team_survey.py  pyproject.toml  requirements.txt
.github/: workflows.yml
.github/workflows/: main.yml
